--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
 		"zizaco/entrust": "dev-laravel-5",
 		"illuminate/html": "5.0.*@dev",
 		"laracasts/flash": "~1.3",
-		"maatwebsite/excel": "~2.0.0"
+		"maatwebsite/excel": "~2.0.0",
+		"jenssegers/date": "~3.0"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
