--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
 		"illuminate/html": "5.0.*@dev",
 		"laracasts/flash": "~1.3",
 		"maatwebsite/excel": "~2.0.0",
-		"sofa/revisionable": "~1.0@dev"
+		"sofa/revisionable": "~1.0@dev",
 		"jenssegers/date": "~3.0"
 
 	},
